Planner inferface working for desktop

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
       </div>
       <div
         routerLink="/"
-        class="flex items-center justify-center rounded w-28 hover:cursor-pointer hover:bg-slate-200"
+        class="flex items-center justify-center w-20 rounded hover:cursor-pointer hover:bg-slate-200"
       >
         <img
           src="../assets/logo.png"
