--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,14 +1,14 @@
 <div
   *ngIf="results.length > 0"
-  class="absolute z-20 w-full mt-1 bg-white border border-gray-300 rounded-md shadow-lg max-w-96"
+  class="absolute z-20 mt-0 bg-white border border-gray-300 rounded-md shadow-lg w-fit max-w-96"
 >
-  <div class="overflow-y-auto max-h-48">
-    <div
+  <ul class="overflow-y-auto max-h-48">
+    <li
       *ngFor="let result of results"
       (click)="select(result)"
-      class="px-4 py-2 cursor-pointer hover:bg-gray-100"
+      class="px-4 py-0.5 text-sm cursor-pointer hover:bg-gray-100"
     >
       {{ result.name }}
-    </div>
-  </div>
+    </li>
+  </ul>
 </div>
