--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -5,7 +5,7 @@
 <div
   *ngIf="teams"
   id="teams"
-  class="grid h-auto grid-flow-row grid-cols-1 gap-4 p-2 overflow-auto md:grid-cols-2 lg:grid-cols-3"
+  class="grid h-auto grid-flow-row grid-cols-1 gap-4 p-2 overflow-auto md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4"
 >
   <div *ngFor="let team of teams">
     <div
@@ -131,7 +131,8 @@
 </div>
 <button
   [routerLink]="'/draft/new'"
-  class="p-2 m-3 rounded-lg shadow-md bg-cyan-300 hover:shadow shadow-cyan-600"
+  class="flex items-center p-1 m-3 rounded-lg shadow-md bg-cyan-300 hover:shadow shadow-cyan-600"
+  title="Add League"
 >
-  Add League
+  <img src="../../../assets/icons/plus.svg" class="w-6" />
 </button>
