fix search query for pokemon forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
       <div
         *ngIf="menuDropdown"
         (click)="menuDropdown = false"
-        class="absolute left-0 flex-col block p-2 bg-white border border-gray-200 divide-y rounded-md shadow-md sm:flex sm:hidden top-full"
+        class="absolute left-0 flex-col block p-2 bg-white border border-gray-200 divide-y rounded-md shadow-md sm:flex top-full"
       >
         <div
           routerLink="/draft"
