add animations to speedchart and move category

--- a/src/app/matchup-overview/matchup/movechart/move-category/move-category.component.html
+++ b/src/app/matchup-overview/matchup/movechart/move-category/move-category.component.html
@@ -23,7 +23,7 @@
   </div>
 </div>
 
-<div *ngIf="show">
+<div *ngIf="show" @growIn>
   <div
     class="z-10 flex border-y border-slate-400 bg-slate-200"
     *ngFor="let move of category.moves"
